GridView column number bug fixes, make up/down arrows more visible

--- a/src/client/views/collections/CollectionMenu.scss
+++ b/src/client/views/collections/CollectionMenu.scss
@@ -234,6 +234,10 @@
             .collectionGridViewChrome-entryBox {
                 width: 50%;
             }
+
+            .collectionGridViewChrome-columnButton {
+                color: black;
+            }
         }
 
 
